fix: removing logout icon on small screens

--- a/src/index.css
+++ b/src/index.css
@@ -364,7 +364,9 @@ input[type="number"] {
   .form textarea::placeholder {
     font-size: 1rem;
   }
-  
+  .hide-on-small-screens {
+    display: none;
+  }
   /* ============= AUTHENTICATION PAGES STYLES ============= */
   .auth {
     display: flex;
